--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 	border-bottom: solid black 0.3em;
 	margin-bottom: 1em;
 	display: flex;
-	background: rgb(247, 247, 247);
 	font-family: cursive;
 }
 .topLeft{
@@ -47,10 +46,9 @@
 	background-position:center;
 }
 .submitButton{
-	bottom: 0em;
-    position: absolute;
-	left: 45%;
-	
+    bottom: -46em;
+    position: relative;
+    left: -37%;
 }
 .menue{
 	width: 20em;
@@ -60,7 +58,6 @@
 	border-style: solid;
 	border-radius: 2em;
 	border-width: 0.3em;
-	background: rgb(247, 247, 247);
 }
 .buttons{
 	height: 7em;
@@ -90,7 +87,6 @@
 	height: 15em;
 	margin: auto;
 	margin-top: 2em;
-	background: rgb(247, 247, 247);
 }
 .buttonMenue{
 	margin-left: 7.5em;
@@ -225,9 +221,6 @@ canvas {
     width: 15em;
     background-color:	#34ccb1;
     border-radius: 1em;
-	margin-left: 4em;
-    margin-top: 3.5em;
-	box-sizing: border-box;
 	border: 0.2em solid black;
 }
 .positionImg{
