--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
 	box-sizing: border-box;
 	border: 0.2em solid black;
 	display: flex;
+	box-shadow: 2px 2px 2px black;
 }
 .buttons:checked{
 	background-color:	#ffffff;
@@ -95,6 +96,7 @@
     width: 3em;
 	background-color: 	#34ccb1;
 	border-radius: 1em;
+	box-shadow: 2px 2px 2px black;
 }
 .buttonL{
 	position: absolute;
@@ -105,6 +107,7 @@
 	margin-left: 0.5em;
 	background-color: 	#34ccb1;
 	border-radius: 1em;
+	box-shadow: 2px 2px 2px black;
 }
 .buttonR{
 	position: absolute;
@@ -115,6 +118,7 @@
 	margin-left: 1.5em;
 	background-color: 	#34ccb1;
 	border-radius: 1em;
+	box-shadow: 2px 2px 2px black;
 }
 .buttonSp{
 	position: absolute;
@@ -125,6 +129,7 @@
 	left: 7.5em;
 	background-color: 	#34ccb1;
 	border-radius: 1em;
+	box-shadow: 2px 2px 2px black;
 }
 .buttonC{
 	position: absolute;
@@ -134,6 +139,7 @@
 	margin-left: 1.5em;
 	border-radius: 2em;
 	background-color: 	#34ccb1;
+	box-shadow: 2px 2px 2px black;
 }
 .arrow {
   border: solid black;
@@ -159,7 +165,7 @@
 }
 button#two:active
 {
-    background:#00ffd2;
+    background:#ffffff;
 }
 #canvas{
   border: solid 1px blue;  
@@ -222,6 +228,7 @@ canvas {
     background-color:	#34ccb1;
     border-radius: 1em;
 	border: 0.2em solid black;
+	box-shadow: 2px 2px 2px black;
 }
 .positionImg{
 	top: 12.7em;
@@ -243,28 +250,15 @@ canvas {
 	margin-left: 3em;
 }
 .colorPicker{
-	border: none;
+    border: none;
     border-right: hidden;
-    background-color: #00ffd2;
-    height: 6.5em;
-    width: 2em;
-    left: 8.68em;
+    background-color: #ffffff;
+    height: 1.5em;
+    width: 5em;
+    left: 13.1em;
     position: absolute;
-    top: 33.8em;
+    top: 38em;
     border-radius: 3em;
-	cursor: pointer;
-	padding: 0;
-}
-.colorPickerSvg{
-	border: none;
-    border-right: hidden;
-    background-color: #00ffd2;
-    height: 6.5em;
-    width: 2em;
-    left: 8.68em;
-    position: absolute;
-    top: 23.3em;
-    border-radius: 3em;
-	cursor: pointer;
-	padding: 0;
+    cursor: pointer;
+    padding: 0;
 }
